[package]
name = "utils"
version = "0.1.0"
edition = "2021"
authors = ["Yangyang Li <yangyang.li@northwestern.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.4"
clap_complete = "4.1.1"
clap-verbosity-flag = "2.0"
log = "0.4.17"
env_logger ="0.10.0"
thiserror = "1.0"
anyhow = "1.0"
human-panic = "1.1"
color-eyre ="0.6"
polars = {version = "0.26.1", features = ["lazy"]}
